--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-sortable-hoc": "^2.0.0",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
